--- a/authorization_templates/model.conf
+++ b/authorization_templates/model.conf
@@ -1,4 +1,5 @@
-# HexaEight Token Issuer CASBIN Sample Model.conf File
+# HexaEight Token Issuer 
+# Sample CASBIN Model.conf File 
 
 [request_definition]
 r = sub, dom, obj, act
@@ -13,4 +14,4 @@ g = _, _, _
 e = some(where (p.eft == allow))
 
 [matchers]
-m = ((g(r.sub, p.sub, r.dom) || (regexMatch(r.sub , p.sub)) && keyMatch2(r.obj, p.obj))) && r.dom == p.dom && r.obj == p.obj && r.act == p.act
+m = ((g(r.sub, p.sub, r.dom) || (regexMatch(r.sub , p.sub)) && keyMatch2(r.obj, p.obj))) && (r.dom == p.dom || (regexMatch(r.dom , p.dom))) && r.obj == p.obj && r.act == p.act
